[package]
name = "klwp-spad"
version = "1.9.5"
edition = "2021"

[dependencies]
eframe = "0.26.2"
cpal = "0.15.3"
rodio = { version = "0.17.3", features = ["mp3", "wav", "vorbis", "flac"] }
ringbuf = "0.3.3"
rfd = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
global-hotkey = "0.8.0"
discord-rich-presence = "1.1.0"
egui-phosphor = "0.4.0"
image = "0.24"
reqwest = { version = "0.12", features = ["blocking"] }
threadpool = "1.8"

[build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true